# s3-worker

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml
.github/workflows/: build.yaml  test.yaml
docker/: Dockerfile  entrypoint.sh  logging.yaml  run.bash
s3worker/: __init__.py  celery_app.py  client.py  config.py  constants.py  exc.py  generate.py  image.py  pathlib.py  plib.py  schema.py  schemas.py  tasks.py  types.py  utils.py
s3worker/cli/: s3w.py
s3worker/db/: __init__.py  api.py  doc_ver.py  document.py  engine.py  models.py  orm.py
tests/: conftest.py  test_dbapi.py  test_tasks.py
