[tool.poetry]
name = "s3worker"
version = "0.4"
description = "Sync local storage with S3"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
botocore = "^1.35"
boto3 = "^1.35"
celery = {version = "^5.4", extras = ["redis"]}
typer = "^0.14"
pydantic = "^2.10"
pydantic-settings = "^2.4"
pyyaml = "^6.0.1"
pdf2image = "^1.17.0"
sqlalchemy = "^2.0.36"
psycopg2 = { version = "^2.9", optional = true}
mysqlclient = {version = "^2.2", optional = true}
rich = "^13.9"

[tool.poetry.extras]
mysql = ["mysqlclient"]
pg  = ["psycopg2"]
databases = ["mysqlclient", "psycopg2"]

[tool.poetry.scripts]
s3w = 's3worker.cli.s3w:app'

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[tool.taskipy.tasks]
worker = "celery -A s3worker.celery_app worker -E -c 4 --loglevel debug -Q demo_s3,demo_s3preview"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
