[project]
name = "s3worker"
version = "0.6"
description = "Worker for syncing local media folder with S3 bucket"
keywords = ["worker", "s3", "documents", "dms"]
authors = [
    { name = "Eugen Ciur", email = "eugen@papermerge.com" }
]
maintainers = [
    { name = "Eugen Ciur", email = "eugen@papermerge.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<4"
dependencies = [
    "botocore==1.42.21",
    "boto3==1.35",
    "celery[gevent,redis]>=5.2",
    "typer>=0.13",
    "pydantic>=2.10",
    "pydantic-settings>=2",
    "pyyaml>=6.0",
    "img2pdf>=0.5.1",
    "pdf2image>=1.16.0",
    "sqlalchemy>=2.0",
    "rich>=13.9",
    "psycopg[binary]>=3.2",
]

[project.scripts]
s3w = "s3worker.cli.s3w:app"

[project.urls]
Homepage = "https://www.papermerge.com/"
Documentation = "https://docs.papermerge.io/"
Repository = "https://github.com/papermerge/s3-worker"

[dependency-groups]
dev = [
    "taskipy>=1.12.2",
    "pytest-asyncio>=1.2.0",
    "pytest>=9.0.1",
]

[tool.taskipy.tasks]
worker = "celery -A s3worker.celery_app worker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"